<resources>
    <string name="app_name">BonCoeur2016</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="go_signup">New to Boncoeur?</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="pos_a">AORTIC</string>
    <string name="pos_m">MITRAL</string>
    <string name="pos_t">TRICUSPID</string>
    <string name="pos_p">PULMONIC</string>

    <string name="listen">LISTEN</string>
    <string name="listen_stop">TAP TO STOP PLAYING</string>
    <string name="record">RECORD</string>
    <string name="record_again">RECORD AGAIN</string>
    <string name="record_stop">LONG-PRESS TO STOP</string>
    <string name="next">NEXT</string>
    <string name="save">SEND</string>
    <string name="back">BACK</string>

    <string name="boncoeur">BonCoeur is designed for children with Rheumatic heart disease (RHD) especially in developing countries. BonCoeur service is intended to help making correct diagnoses without doctor\'s visit. Just record heart sounds and take pictures. Professional physicians will make a diagnosis for you in no time.</string>

</resources>
